Bug 144587 - Tree item is inconsistent with dark theme
Summary: Tree item is inconsistent with dark theme
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: low normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: KDE, KF5 Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2021-09-18 12:42 UTC by medmedin2014
Modified: 2023-05-18 19:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Tree item is inconsistent with dark theme (230.25 KB, image/png)
2021-09-18 12:42 UTC, medmedin2014
Details
Screnshot of patched treelist (70.86 KB, image/png)
2022-10-13 20:11 UTC, Rafael Lima
Details
New tree problems in dark theme with LO 7.5.2.2 (267.68 KB, image/png)
2023-05-15 12:53 UTC, medmedin2014
Details
Screenshot in LO 7.6 alpha (lines are OK) (78.58 KB, image/png)
2023-05-17 13:36 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2021-09-18 12:42:51 UTC
Created attachment 175104 [details]
Tree item is inconsistent with dark theme

On Manjaro with KDE desktop and using Dark breeze theme, the tree component is hard to be seen and is inconsistent with system theme. See attached image for more info.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 008f28c9e01114e731f785e9e238236a1ed069d2
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-08-22_15:17:36
Calc: threaded

Operating System: Manjaro Linux
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.4.143-1-MANJARO (64-bit)
Graphics Platform: X11
Comment 1 Roman Kuznetsov 2022-08-06 15:52:17 UTC
confirm in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a9d225df2f8772e21435523ca20df1ece37390e4
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Rafael Lima 2022-10-13 20:09:03 UTC
Proposed patch in Gerrit for review:

https://gerrit.libreoffice.org/c/core/+/141315
Comment 3 Rafael Lima 2022-10-13 20:11:48 UTC
Created attachment 183026 [details]
Screnshot of patched treelist

Here's how it looks like with the patch.
Comment 4 Commit Notification 2022-11-08 16:16:50 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f9cd841a22fa7eb6f29ca8b9a35a8b016fb3d56

tdf#144587 Fix lines in treelists using dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 medmedin2014 2023-05-15 12:51:49 UTC
With :

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 2; OS: Linux 6.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
7.5.2-1
Calc: threaded



The problem became much more severe in many places in LO. See attached image for more info.
Comment 6 medmedin2014 2023-05-15 12:53:12 UTC
Created attachment 187293 [details]
New tree problems in dark theme with LO 7.5.2.2
Comment 7 Rafael Lima 2023-05-17 13:36:36 UTC
Created attachment 187355 [details]
Screenshot in LO 7.6 alpha (lines are OK)

This is weird, because I'm getting the correct line colors in LO 7.6 alpha built today.

See attached image with what I'm seeing.

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 00ede35a5241925d7060dd44fb81b71f7b03091c
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

Maybe this is a theme issue? Are you using Breeze dark?
Comment 8 medmedin2014 2023-05-18 19:08:08 UTC
(In reply to Rafael Lima from comment #7)
> Created attachment 187355 [details]
> Screenshot in LO 7.6 alpha (lines are OK)
> 
> This is weird, because I'm getting the correct line colors in LO 7.6 alpha
> built today.
> 
> See attached image with what I'm seeing.
> 
> Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 00ede35a5241925d7060dd44fb81b71f7b03091c
> CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
> Locale: pt-BR (pt_BR.UTF-8); UI: en-US
> Calc: CL threaded
> 
> Maybe this is a theme issue? Are you using Breeze dark?

Sorry, it was a bug coming from Breeze Dark theme, after upgrading to Plasma 5.27.5 it seems to look good will LO 7.5.3.2, thanks for your help :)