tdf#144587 Fix lines in treelists using dark mode

As reported by the user, the lines in a treelist are dark over a dark background. This patch fixes that.

Tested with kf5, gen and gtk3.

Change-Id: I7f1a206f4adba496d312b25a9db121df317c7c84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141315
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins